// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "DELETE": "FETCH_MOVIES_DELETE",
  "ERROR": "FETCH_MOVIES_ERROR",
  "START": "FETCH_MOVIES_START",
  "SUCCESS": "FETCH_MOVIES_SUCCESS",
  "delete": [Function],
  "error": [Function],
  "id": "FETCH_MOVIES",
  "start": [Function],
  "success": [Function],
}
`;

exports[` 2`] = `
Object {
  "DELETE": "FETCH_MOVIES_DELETE",
  "ERROR": "FETCH_MOVIES_ERROR",
  "START": "FETCH_MOVIES_START",
  "SUCCESS": "FETCH_MOVIES_SUCCESS",
  "delete": [Function],
  "error": [Function],
  "id": "FETCH_MOVIES",
  "start": [Function],
  "success": [Function],
}
`;

exports[` 3`] = `
Object {
  "DELETE": "FETCH_MOVIES_DELETE",
  "ERROR": "FETCH_MOVIES_ERROR",
  "START": "FETCH_MOVIES_START",
  "SUCCESS": "FETCH_MOVIES_SUCCESS",
  "delete": [Function],
  "error": [Function],
  "id": "FETCH_MOVIES",
  "start": [Function],
  "success": [Function],
}
`;

exports[`blueprint createBlueprint should create blueprint with custom actions Delete 1`] = `
Object {
  "@@redux-ops/": Object {
    "operationAction": Object {
      "payload": Object {
        "data": undefined,
        "id": "FETCH_MOVIES",
        "status": "delete",
      },
      "type": "@@redux-ops/DELETE",
    },
    "originalAction": undefined,
  },
  "type": "@@redux-ops/BLUEPRINT",
}
`;

exports[`blueprint createBlueprint should create blueprint with custom actions Error 1`] = `
Object {
  "@@redux-ops/": Object {
    "operationAction": Object {
      "payload": Object {
        "data": "404",
        "id": "FETCH_MOVIES",
        "status": "error",
      },
      "type": "@@redux-ops/UPDATE",
    },
    "originalAction": undefined,
  },
  "type": "@@redux-ops/BLUEPRINT",
}
`;

exports[`blueprint createBlueprint should create blueprint with custom actions Start 1`] = `
Object {
  "@@redux-ops/": Object {
    "operationAction": Object {
      "payload": Object {
        "data": undefined,
        "id": "FETCH_MOVIES",
        "status": "start",
      },
      "type": "@@redux-ops/START",
    },
    "originalAction": Object {
      "payload": Object {
        "genre": "Science-Fiction",
        "page": 1,
      },
      "type": "FETCH_MOVIES",
    },
  },
  "type": "@@redux-ops/BLUEPRINT",
}
`;

exports[`blueprint createBlueprint should create blueprint with custom actions Success 1`] = `
Object {
  "@@redux-ops/": Object {
    "operationAction": Object {
      "payload": Object {
        "data": undefined,
        "id": "FETCH_MOVIES",
        "status": "success",
      },
      "type": "@@redux-ops/UPDATE",
    },
    "originalAction": Object {
      "payload": Object {
        "movies": Array [
          Object {
            "id": 1,
            "name": "Jurassic World",
          },
          Object {
            "id": 2,
            "name": "The Dark Knight",
          },
          Object {
            "id": 3,
            "name": "Avatar",
          },
        ],
      },
      "type": "FETCH_MOVIES_SUCCESS_CUSTOM",
    },
  },
  "type": "@@redux-ops/BLUEPRINT",
}
`;

exports[`blueprint createBlueprint should create blueprint with default actions Delete 1`] = `
Object {
  "@@redux-ops/": Object {
    "operationAction": Object {
      "payload": Object {
        "data": undefined,
        "id": "FETCH_MOVIES",
        "status": "delete",
      },
      "type": "@@redux-ops/DELETE",
    },
    "originalAction": undefined,
  },
  "type": "@@redux-ops/BLUEPRINT",
}
`;

exports[`blueprint createBlueprint should create blueprint with default actions Error 1`] = `
Object {
  "@@redux-ops/": Object {
    "operationAction": Object {
      "payload": Object {
        "data": undefined,
        "id": "FETCH_MOVIES",
        "status": "error",
      },
      "type": "@@redux-ops/UPDATE",
    },
    "originalAction": undefined,
  },
  "type": "@@redux-ops/BLUEPRINT",
}
`;

exports[`blueprint createBlueprint should create blueprint with default actions Start 1`] = `
Object {
  "@@redux-ops/": Object {
    "operationAction": Object {
      "payload": Object {
        "data": undefined,
        "id": "FETCH_MOVIES",
        "status": "start",
      },
      "type": "@@redux-ops/START",
    },
    "originalAction": undefined,
  },
  "type": "@@redux-ops/BLUEPRINT",
}
`;

exports[`blueprint createBlueprint should create blueprint with default actions Success 1`] = `
Object {
  "@@redux-ops/": Object {
    "operationAction": Object {
      "payload": Object {
        "data": undefined,
        "id": "FETCH_MOVIES",
        "status": "success",
      },
      "type": "@@redux-ops/UPDATE",
    },
    "originalAction": undefined,
  },
  "type": "@@redux-ops/BLUEPRINT",
}
`;

exports[`blueprint createBlueprint should create blueprint with default actions and custom payloads Delete 1`] = `
Object {
  "@@redux-ops/": Object {
    "operationAction": Object {
      "payload": Object {
        "data": undefined,
        "id": "FETCH_MOVIES",
        "status": "delete",
      },
      "type": "@@redux-ops/DELETE",
    },
    "originalAction": undefined,
  },
  "type": "@@redux-ops/BLUEPRINT",
}
`;

exports[`blueprint createBlueprint should create blueprint with default actions and custom payloads Error 1`] = `
Object {
  "@@redux-ops/": Object {
    "operationAction": Object {
      "payload": Object {
        "data": "404",
        "id": "FETCH_MOVIES",
        "status": "error",
      },
      "type": "@@redux-ops/UPDATE",
    },
    "originalAction": undefined,
  },
  "type": "@@redux-ops/BLUEPRINT",
}
`;

exports[`blueprint createBlueprint should create blueprint with default actions and custom payloads Start 1`] = `
Object {
  "@@redux-ops/": Object {
    "operationAction": Object {
      "payload": Object {
        "data": Object {
          "genre": "Science-Fiction",
          "page": 1,
        },
        "id": "FETCH_MOVIES",
        "status": "start",
      },
      "type": "@@redux-ops/START",
    },
    "originalAction": undefined,
  },
  "type": "@@redux-ops/BLUEPRINT",
}
`;

exports[`blueprint createBlueprint should create blueprint with default actions and custom payloads Success 1`] = `
Object {
  "@@redux-ops/": Object {
    "operationAction": Object {
      "payload": Object {
        "data": Array [
          Object {
            "id": 1,
            "name": "Jurassic World",
          },
          Object {
            "id": 2,
            "name": "The Dark Knight",
          },
          Object {
            "id": 3,
            "name": "Avatar",
          },
        ],
        "id": "FETCH_MOVIES",
        "status": "success",
      },
      "type": "@@redux-ops/UPDATE",
    },
    "originalAction": undefined,
  },
  "type": "@@redux-ops/BLUEPRINT",
}
`;
